# saulbot-rust

./: Cargo.toml  Dockerfile  README.md  messages.json
.github/workflows/: docker-image.yml
manifests/: deployment.yaml
src/: main.rs
